<resources>
    <string name="app_name">Sudoku Solver App</string>

    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>

    <string name="solve">Solve</string>
    <string name="clear">Clear</string>

    <string name="start">Start</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="title">SUDOKU SOLVER</string>
    <string name="info"></string>


</resources>